network/policies/db_ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: db
  labels:
    ns: db
spec: {}
status: {}
