network/policies/db-dns.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dns
  namespace: db
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    ports:
      - protocol: UDP
        port: 53
  egress:
  - to:
    ports:
      - protocol: UDP
        port: 53
...
